--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ header a {
   display: none;
 }
 
+.mobile-menu ul li a:hover {
+  color:#e05304;
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
