--- a/media.css
+++ b/media.css
@@ -45,6 +45,10 @@
   .modal-head {
     justify-content: space-between;
   }
+
+  .project-details-modal {
+    padding: 24px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -191,6 +195,38 @@
   form ul .btn {
     align-self: flex-start;
   }
+
+  .project-details-modal img {
+    width: 50%;
+    max-height: 448px;
+    max-width: 660px;
+  }
+
+  .modal-content {
+    flex-direction: row;
+  }
+
+  .modal-lower-half {
+    justify-content: space-between;
+  }
+
+  .project-modal-header {
+    gap: 10px;
+  }
+
+  .modal-lower-half p {
+    font-size: 16px;
+    line-height: 30px;
+    color: #344563;
+  }
+
+  .modal-heading-mobile {
+    display: none;
+  }
+
+  .modal-heading-desktop {
+    display: block;
+  }
 }
 
 @media screen and (min-width: 1500px) {
@@ -238,5 +274,9 @@
 
   .end-wrapper {
     margin: 0 135px;
+  }
+
+  .project-details-modal img {
+    width: 100%;
   }
 }
