--- a/style.css
+++ b/style.css
@@ -542,6 +542,7 @@ h2 {
   position: fixed;
   top: 0;
   display: flex;
+  z-index: 10;
 }
 
 .project-details-modal {
@@ -574,6 +575,7 @@ h2 {
 }
 
 .dark-cross-button {
+  cursor: pointer;
   background: url(images/Icons/dark-x-icon.png) no-repeat center center/cover;
   width: 14px;
   height: 14px;
