--- a/style.css
+++ b/style.css
@@ -232,6 +232,14 @@ form ul li {
   font-weight: 400;
 }
 
+.modal-head h3 {
+  color: #172b4d;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+}
+
 #intro-content h3 {
   color: #fff;
   font-size: 1.8rem;
@@ -555,16 +563,7 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 24px 0;
-  box-shadow: 0px 0px 3px 0px black;
-
-}
-
-.modal-head h3 {
-  color: #172b4d;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 44px;
+  box-shadow: 0 0 3px 0 black;
 }
 
 .modal-head {
