--- a/style.css
+++ b/style.css
@@ -366,7 +366,6 @@ form ul li {
 
 .content {
   display: flex;
-  width: 295px;
   padding: 84px 16px 0;
   background-color: #1c1a195b;
   color: #fff;
@@ -374,6 +373,7 @@ form ul li {
   justify-content: space-evenly;
   flex: 1;
   transition: all 0.2s ease-in;
+  text-shadow: 0 0 10px black;
 }
 
 .content:hover {
