--- a/style.css
+++ b/style.css
@@ -607,6 +607,25 @@ h2 {
 
 /* Utility */
 
+::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #f55800;
+}
+
 .appear {
   display: block;
 }
