Add math magicians project

--- a/style.css
+++ b/style.css
@@ -599,6 +599,10 @@ h2 {
   gap: 16px;
 }
 
+.modal-content img {
+  border: 2px inset #eee;
+}
+
 .modal-lower-half {
   display: flex;
   flex-direction: column;
